Fully refactored to use CyberCore